@@ -1,3 +1,9 @@
+2006-07-07  Tom Tromey  <tromey@redhat.com>
+
+	* jcf-dump.c (HANDLE_ENCLOSINGMETHOD_ATTRIBUTE): Declare locals
+	earlier.
+	(HANDLE_SIGNATURE_ATTRIBUTE): Likewise.
+
 2006-07-07  Andrew Haley  <aph@redhat.com>
 
         * jcf-parse.c (set_source_filename): Don't check for
